--- a/light.mode.css
+++ b/light.mode.css
@@ -2109,6 +2109,7 @@ svg {
     overflow: hidden;
     transition: height 0.2s ease;
     order: 1;
+    z-index: 1;
 }
 
 #vc-spotify-player:hover .vc-spotify-button-row {
@@ -2117,6 +2118,7 @@ svg {
 
 #vc-spotify-progress-bar {
     order: 2;
+    z-index: 1;
 }
 
 .vc-spotify-button {
